fixed : overflow and demos

--- a/packages/panelImgRadio/src/index.less
+++ b/packages/panelImgRadio/src/index.less
@@ -7,7 +7,7 @@ ol, ul {
 .radio-list {
   display: flex;
   justify-content: flex-start;
-  overflow-x: scroll;
+  overflow-x: auto;
   // flex-wrap: wrap;
   .radio-item {
     display: flex;
